# llm-azure-openai

./: README.md  llm_azure_openai.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
test/: conftest.py  test_azure_openai.py
